finish tour service

--- a/TRMService/Gemfile
+++ b/TRMService/Gemfile
@@ -12,6 +12,9 @@ gem 'devise'
 # Use paperclip to upload image
 gem 'paperclip'
 
+#USe debugger for debug
+gem 'debugger'
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
 
